<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.sonorous</groupId>
    <artifactId>SonorousAbilities</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <!-- This adds the Spigot Maven repository to the build -->
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>sk89q-repo</id>
            <url>https://maven.enginehub.org/repo/</url>
        </repository>
    </repositories>

    <dependencies>
        <!--This adds the Spigot API artifact to the build -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.20.4-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!--        <dependency>-->
        <!--            <groupId>org.spigotmc</groupId>-->
        <!--            <artifactId>spigot</artifactId>-->
        <!--            <version>1.20.2-R0.1-SNAPSHOT</version>-->
        <!--            <classifier>remapped-mojang</classifier>-->
        <!--            <scope>provided</scope>-->
        <!--        </dependency>-->
        <dependency>
            <groupId>com.github.NivixX.NDatabase</groupId>
            <artifactId>ndatabase-api</artifactId>
            <version>1.1.9</version>
        </dependency>
        <dependency>
            <groupId>io.github.skytasul</groupId>
            <artifactId>guardianbeam</artifactId>
            <version>2.3.3</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>ca.bkaw</groupId>
            <artifactId>paper-nms</artifactId>
            <version>1.20.4-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.sk89q.worldguard</groupId>
            <artifactId>worldguard-bukkit</artifactId>
            <version>7.0.9</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>


    <pluginRepositories>
        <pluginRepository>
            <id>bytecode.space</id>
            <url>https://repo.bytecode.space/repository/maven-public/</url>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <plugins>
            <plugin>
                <groupId>ca.bkaw</groupId>
                <artifactId>paper-nms-maven-plugin</artifactId>
                <version>1.4.3</version>
                <executions>
                    <execution>
                        <phase>process-classes</phase>
                        <goals>
                            <goal>remap</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!--            <plugin>-->
            <!--                <groupId>org.apache.maven.plugins</groupId>-->
            <!--                <artifactId>maven-install-plugin</artifactId>-->
            <!--                <version>3.1.1</version>-->
            <!--                <configuration>-->
            <!--                    <groupId>com.sereneoasis</groupId>-->
            <!--                    <artifactId>SonorousAbilities</artifactId>-->
            <!--                    <version>1.0-SNAPSHOT</version>-->
            <!--                    <packaging>jar</packaging>-->
            <!--                    <file>${basedir}/target/SonorousAbilities-1.0-SNAPSHOT.jar</file>-->
            <!--                    <generatePom>false</generatePom>-->
            <!--                </configuration>-->
            <!--                <executions>-->
            <!--                    <execution>-->
            <!--                        <id>install-jar-lib</id>-->
            <!--                        <goals>-->
            <!--                            <goal>install-file</goal>-->
            <!--                        </goals>-->
            <!--                        <phase>validate</phase>-->
            <!--                    </execution>-->
            <!--                </executions>-->
            <!--            </plugin>-->
        </plugins>
    </build>


    <!--    <build>-->
    <!--        <defaultGoal>clean package install</defaultGoal>-->
    <!--        <finalName>SonorousAbilities</finalName>-->
    <!--        <sourceDirectory>${project.basedir}/src/</sourceDirectory>-->
    <!--        <resources>-->
    <!--            <resource>-->
    <!--                <targetPath>.</targetPath>-->
    <!--                <filtering>true</filtering>-->
    <!--                <directory>src/</directory>-->
    <!--                <includes>-->
    <!--                    <include>plugin.yml</include>-->
    <!--                </includes>-->
    <!--            </resource>-->
    <!--        </resources>-->
    <!--        <plugins>-->
    <!--            <plugin>-->
    <!--                <groupId>org.apache.maven.plugins</groupId>-->
    <!--                <artifactId>maven-compiler-plugin</artifactId>-->
    <!--                <version>3.12.1</version>-->
    <!--                <configuration>-->
    <!--                    <source>17</source>-->
    <!--                    <target>17</target>-->
    <!--                </configuration>-->
    <!--            </plugin>-->
    <!--            <plugin>-->
    <!--                <artifactId>maven-shade-plugin</artifactId>-->
    <!--                <version>3.5.1</version>-->
    <!--                <executions>-->
    <!--                    <execution>-->
    <!--                        <phase>package</phase>-->
    <!--                        <goals>-->
    <!--                            <goal>shade</goal>-->
    <!--                        </goals>-->
    <!--                    </execution>-->
    <!--                </executions>-->
    <!--                <configuration />-->
    <!--            </plugin>-->
    <!--        </plugins>-->
    <!--    </build>-->

</project>